# hs-polynomial

./: CHANGELOG.md  TODO-poly.md  jolharg-polynomial.cabal  shell.nix
lib/: Polynomial.hs
lib/Polynomial/: Class.hs  Error.hs  Internal.hs  NonEmpty.hs  Pretty.hs  Sparse.hs
test/: PolynomialSpec.hs
test/Polynomial/: NonEmptySpec.hs  SparseSpec.hs
